Bug 31418 - [gdb/tdep, arm] $tpidruro unavailable
Summary: [gdb/tdep, arm] $tpidruro unavailable
Status: RESOLVED FIXED
Alias: None
Product: gdb
Classification: Unclassified
Component: tdep (show other bugs)
Version: HEAD
: P2 normal
Target Milestone: 15.1
Assignee: Not yet assigned to anyone
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-02-27 16:16 UTC by Tom de Vries
Modified: 2024-03-04 15:18 UTC (History)
1 user (show)

See Also:
Host:
Target:
Build:
Last reconfirmed:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Tom de Vries 2024-02-27 16:16:30 UTC
As earlier reported here ( https://sourceware.org/pipermail/gdb-patches/2024-February/206644.html ):
...
$ gcc hello.c
$ gdb -q -batch a.out -ex start -ex 'p $tpidruro'
Temporary breakpoint 1 at 0x512

Temporary breakpoint 1, 0xaaaaa512 in main ()
$1 = <unavailable>
...

This is on a pinebook, with 64-bit kernel and 32-bit userland.
Comment 1 Tom de Vries 2024-02-27 16:17:31 UTC
As mentioned here ( https://sourceware.org/pipermail/gdb-patches/2024-February/206847.html ), Thiago is working on a patch.
Comment 2 Thiago Jung Bauermann 2024-02-27 21:50:51 UTC
Thank you for opening this bug. I posted the patch here:

https://inbox.sourceware.org/gdb-patches/20240227214851.350579-1-thiago.bauermann@linaro.org/
Comment 3 Sourceware Commits 2024-02-29 15:33:36 UTC
The master branch has been updated by Thiago Bauermann <bauermann@sourceware.org>:

https://sourceware.org/git/gitweb.cgi?p=binutils-gdb.git;h=bbb12eb9c84aa2b32480b7c022c494c2469ef717

commit bbb12eb9c84aa2b32480b7c022c494c2469ef717
Author: Thiago Jung Bauermann <thiago.bauermann@linaro.org>
Date:   Mon Feb 26 19:11:45 2024 -0300

    gdb/arm: Remove tpidruro register from non-FreeBSD target descriptions
    
    Commit 92d48a1e4eac ("Add an arm-tls feature which includes the tpidruro
    register from CP15.") introduced the org.gnu.gdb.arm.tls feature, which
    adds the tpidruro register, and unconditionally enabled it in
    aarch32_create_target_description.
    
    In Linux, the tpidruro register isn't available via ptrace in the 32-bit
    kernel but it is available for an aarch32 program running under an arm64
    kernel via the ptrace compat interface.  This isn't currently implemented
    however, which causes GDB on arm-linux with 64-bit kernel to list the
    register but show it as unavailable, as reported by Tom de Vries:
    
      $ gdb -q -batch a.out -ex start -ex 'p $tpidruro'
      Temporary breakpoint 1 at 0x512
    
      Temporary breakpoint 1, 0xaaaaa512 in main ()
      $1 = <unavailable>
    
    Simon Marchi then clarified:
    
    > The only time we should be seeing some "unavailable" registers or memory
    > is in the context of tracepoints, for things that are not collected.
    > Seeing an unavailable register here is a sign that something is not
    > right.
    
    Therefore, disable the TLS feature in aarch32 target descriptions for Linux
    and NetBSD targets (the latter also doesn't seem to support accessing
    tpidruro either, based on a quick look at arm-netbsd-nat.c).
    
    This patch fixes the following tests:
    
    Running gdb.base/inline-frame-cycle-unwind.exp ...
    FAIL: gdb.base/inline-frame-cycle-unwind.exp: cycle at level 3: backtrace when the unwind is broken at frame 3
    FAIL: gdb.base/inline-frame-cycle-unwind.exp: cycle at level 5: backtrace when the unwind is broken at frame 5
    FAIL: gdb.base/inline-frame-cycle-unwind.exp: cycle at level 1: backtrace when the unwind is broken at frame 1
    
    Tested with Ubuntu 22.04.3 on armv8l-linux-gnueabihf in native,
    native-gdbserver and native-extended-gdbserver targets with no regressions.
    
    PR tdep/31418
    Bug: https://sourceware.org/bugzilla/show_bug.cgi?id=31418
    
    Approved-By: John Baldwin <jhb@FreeBSD.org>
Comment 4 Tom de Vries 2024-03-04 15:18:03 UTC
Fixed.